--- a/SOURCE CODE/public/index.html
+++ b/SOURCE CODE/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="htmll">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
@@ -15,5 +15,7 @@
   <body id="bodycan">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+    </script>
   </body>
 </html>
