--- a/SOURCE CODE/public/index.html
+++ b/SOURCE CODE/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Welcome to Emin Bilgen's portfolio!"
     />
+    <meta name="keywords" content="Emin Bilgen, Emin Bilgen Yazılım, Emin Bilgen Web Geliştirici" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Emin Bilgen</title>
   </head>
